--- a/portfolio website/portfolio.html
+++ b/portfolio website/portfolio.html
@@ -119,8 +119,8 @@
     <div>
       <img src="profile.jpg" alt="Profile Photo">
       <h1 class="fw-bold">Your Name</h1>
-      <p class="lead">Student at XYZ College of Engineering</p>
-      <p>Former student of ABC Higher Secondary School</p>
+      <p class="lead">Student at Sathyabama university College of Engineering</p>
+      <p>Former student of Sri Chaitanya Techno Higher Secondary School</p>
       <div class="mt-3">
         <a href="https://www.linkedin.com/in/yeluri-nanda-gopal-8b4882287/" target="_blank" class="btn btn-light me-2">
           <i class="bi bi-linkedin"></i> LinkedIn
@@ -186,3 +186,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
