--- a/portfolio website/portfolio.html
+++ b/portfolio website/portfolio.html
@@ -118,7 +118,7 @@
   <section class="hero" id="about">
     <div>
       <img src="profile.jpg" alt="Profile Photo">
-      <h1 class="fw-bold">Your Name</h1>
+      <h1 class="fw-bold">Nanda Gopal</h1>
       <p class="lead">Student at Sathyabama university College of Engineering</p>
       <p>Former student of Sri Chaitanya Techno Higher Secondary School</p>
       <div class="mt-3">
@@ -186,4 +186,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
